2013-07-03  Tassilo Horn  <tsdh@gnu.org>

	* preview.el (preview-gs-command): Change test for `mgs'
	functionality to "gs -q -dNODISPLAY -c quit".

2013-07-02  Tassilo Horn  <tsdh@gnu.org>

	* preview.el (preview-gs-command): Better test if `mgs' is
	working.

2013-07-01  Tassilo Horn  <tsdh@gnu.org>

	* preview.el (preview-gs-command): Test `mgs' for functionality
	before using it.

2013-06-29  Tassilo Horn  <tsdh@gnu.org>

	* preview.el (preview-gs-command): Prefer the TeX distro
	ghostscript wrapper scripts `rungs' and `mgs' over calling `gs'
	directly which requires it to be in PATH.

2013-06-26  Tassilo Horn  <tsdh@gnu.org>

	* Makefile.in (use-hint): Don't warn about problems with overly
	obsolete packages.

2013-04-08  Tassilo Horn  <tsdh@gnu.org>

	* latex/preview.dtx: Fix date format which got converted from
	YYYY/MM/DD to YYYY-MM-DD during conversion to git.

2012-12-04  Tassilo Horn  <tsdh@gnu.org>

	Merge revno 314 (Stefan Monnier) from emacs elpa branch: Shorten
	copyright year ranges.

	* preview.el:

2011-01-23  Ralf Angeli  <angeli@caeruleus.net>

	* preview.el (preview-auto-reveal): Add `forward-char' and
	`backward-char' to commands on which to open an overlay.

2010-10-14  Ralf Angeli  <angeli@caeruleus.net>

	* preview.el (preview-gs-options): Start gs with -dDELAYSAFER
	instead of -dSAFER.
	(preview-prepare-fast-conversion): Add relevant files to
	PermitFileReading list of paths.

2010-02-14  Ralf Angeli  <angeli@caeruleus.net>

	* latex/preview.dtx: Add support for XeTeX.

2009-06-18  Ralf Angeli  <angeli@caeruleus.net>

	* preview.el (preview-start-pdf2dsc): Determine the PDF source
	depending on the previews being generated from the master or the
	region file.

2008-05-10  Reiner Steib  <reiner.steib@gmx.de>

	* preview.el (preview-auto-cache-preamble): Fix markup in in doc
	string.

2008-02-03  Ralf Angeli  <angeli@caeruleus.net>

	* Relicense all "GPLv2 or later" files to "GPLv3 or later".

	* COPYING: Switch to GPLv3.
