@@ -1,3 +1,9 @@
+2013-09-05  Tassilo Horn  <tsdh@gnu.org>
+
+	* preview.el (preview-lispdir): New defvar.
+
+	* auto.el.in (preview-lispdir): Set it to @lisppackagelispdir@.
+
 2013-07-03  Tassilo Horn  <tsdh@gnu.org>
 
 	* preview.el (preview-gs-command): Change test for `mgs'
